--- a/english/word/simple-word/markdown/p18-p20.md
+++ b/english/word/simple-word/markdown/p18-p20.md
@@ -23,7 +23,7 @@
     - readily adv. 简单地，乐意地
 - six
 - wear
-    - vt. 穿；戴；面带；**磨损**
+    - vt. **磨损**；穿；戴；面带
     - **磨损**
         - The stones have been worn(wear-wore-worn) smoothly([smuðlɪ] 顺利) by the constant(持续的) flow of water.
     - wear-wore-worn
@@ -31,14 +31,14 @@
     - v. 担心；n. 担心
     - worry about 担心
         - People in developing countries <u>worry about</u> migration(移民).
-            - immigration 移入民
-            - emigration 移出民
+            - immigration [ˌɪmɪˈɡreɪʃn] 移入民
+            - emigration [ˌɛmɪˈɡreʃən] 移出民
 - zone
     - n. 地区，区域
     - the new ultra-low(超低的) emission(排放) zone.
     - zone vs area 地区
-        - area 没有固定边界
         - zone 有固定边界
+        - area 没有固定边界
 - beauty
     - n. 美丽
     - beautiful adj. 美丽的
@@ -60,7 +60,7 @@
     - adv. 到别处，在别处
 - escape [ɪˈskeɪp]
     - vi. 逃跑； vt./n. 逃避，逃离
-    - inescapably 不可避免的
+    - inescapably [ˌɪnɪ'skeɪpəblɪ] 不可避免的
         - The law(法律) (the court([kɔːrt]) shapes) is inescapably political([pəˈlɪtɪkl]). 法律（法院所塑造的法律）不可避免地具有政治性
 - fat
     - adj. 胖的；丰厚的
@@ -79,12 +79,13 @@
     - n. 英里
     - mil- 千
     - milestone n. 里程碑
-    - male adj. 男性的
+    - male [meɪl] adj. 男性的
+    - mill [mɪl] n. 磨坊
 - native
     - adj. 出生地的；当地的；土著
     - nat- 出生
 - north
-- obviously
+- obviously [ˈɑːbviəsli] b 不发音
     - adv. 明显地
     - **obvious** [ˈɑːbviəs]
         - adj. 明显的
@@ -98,8 +99,9 @@
     - 一刻钟
         - in the third quarter
     - 将...四等分
-        - She peeled( [piːl] 剥皮) and quartered an apple.
+        - She peeled([piːl] 剥皮) and quartered an apple.
     - quarterly adj. 季度的，每季的
+    - seasonal [ˈsiːzənl] adj. 季节性的，随季节变化的
 - rapid [ˈræpɪd]
     - adj. 快的，快速的
     - rapid vs fast vs quick
@@ -158,7 +160,7 @@
     - adj. 繁忙的；热闹的
 - error
     - n. 错误，差错
-    - The top reason for the fake news phenomenon([fəˈnɑːmɪnən] 现象) is "reade error". 假新闻现象的最主要原因是‘读者错误’
+    - The top reason for the fake news phenomenon([fəˈnɑːmɪnən] 现象) is "reader error". 假新闻现象的最主要原因是‘读者错误’
     - erroneous adj. 错误的 [ɪˈroʊniəs]
         - ...reveal(揭示) its erroneous nature(本质).
 - familiar [fəˈmɪliər]
@@ -182,8 +184,7 @@
     - v. 打，击；v. 到达
     - beat 打
     - 打击
-        - ...manufacturing([ˌmænjəˈfæktʃərɪŋ] 制造业) has taken a significant(adj. 重要的; 显著的) hit during recent
-          decades...
+        - ...manufacturing([ˌmænjəˈfæktʃərɪŋ] 制造业) has taken a significant(adj. 重要的; 显著的) hit during recent decades...
     - 到达
         - Many people hit middle age.
     - hit, hit, hit, hitting
@@ -214,7 +215,7 @@
     - n. 自豪
     - take pride in 以...为豪
         - Stratford, says Friedman, <u>takes pride in</u> its independent(独立的) voice.
-    - proud adj. 自豪的 be proud of
+    - proud [praʊd] adj. 自豪的 be proud of
         - Stratford <u>is</u> most <u>pound of</u> its nonconformist([ˌnɑnkənˈfɔrmɪst] 不墨守成规的) image.
     - price
 - province [ˈprɑːvɪns]
@@ -249,6 +250,7 @@
 - walk
 - winner
     - n. 获胜的人，优胜者
+    - winter n. 冬天
 - actor
     - n. 男演员；行动者
 - ahead
@@ -273,7 +275,7 @@
     - every day adv.
         - We unconsciously([ʌnˈkɑnʃəsli] 无意识的) imitate(模拟) the behavior we see every day.
 - fruit [fruːt]
-    - n. 水果；**成果** 
+    - n. **成果**；水果
     - fruitless 没有成果的
 - gas
     - n. 气体；煤气；汽油
@@ -293,9 +295,9 @@
     - sense of happiness 愉悦感
     - sense of sadness 悲伤感
     - sense of responsibility 责任感
-- hurt
+- hurt [hɜːrt]
     - vt. 使...伤心；伤害； n. 伤害
-    - I have hurt her heart.
+    - I have hurt her heart([hɑːrt]).
 - mode
     - n. 方式，样式
 - nor
@@ -351,13 +353,13 @@
     - n. 仪式，典礼 == ritual([ˈrɪtʃuəl])
     - graduation ceremony
 - chain
-    - n. 链条；**连锁店**
+    - n. **连锁店**；链条
     - 连锁店
         - The ruling is a victory(胜利) for big chains with a presence(在场) in many states. 这一裁决是许多州大型连锁企业的胜利
 - chairman
     - n. 主持人；主席
 - cook
-    - v. 烹调，煮； n. **厨师**
+    - n. **厨师**；v. 烹调，煮
     - cooker n. 炊具
 - danger
     - n. 危险；危险物
@@ -415,6 +417,7 @@
     - The journalist([ˈdʒɜːrnəlɪst] 记者) must understand the law more profoundly(深刻地，深奥地) than an ordinary citizen(公民).
     - common 普通的
     - extraordinary adj. 非凡的，卓越的
+    - excellent adj. 优秀的，卓越的
 - partner
     - n. 配偶；搭档；合伙人
 - quota
