fix: write compare

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -75,14 +75,9 @@ stay in our city.<br>
 ## 007
 
 Dear Professor Smith,<br>
-&emsp;&emsp;&emsp;&emsp;I am looking forward to my travel to the United States and visiting you in Harvard
-University.<br>
-&emsp;&emsp;&emsp;&emsp;Unfortunately, I have recently been diagnosed with a serious ear infection which will require
-surgery on the same day as my departure. I am sorry to say that I will therefore not be able to make the travel plan. If
-possible, I would like to postpone the travel plan to another day later this year. I promise that such a situation does
-not usually happen, and apologize for any inconvenience this may cause you.<br>
-&emsp;&emsp;&emsp;&emsp;Please excuse me for not being able to inform you of my situation sooner. Your prompt attention
-to my suggestion would be highly appreciated.<br>
+&emsp;&emsp;&emsp;&emsp;I am looking forward to my travel to the United States and **visiting** you in Harvard University.<br>
+&emsp;&emsp;&emsp;&emsp;**Unfortunately**, I have recently been diagnosed with a serious ear infection which will require **surgery** on the same day as my departure. I am sorry to say that I will therefore not be able to make the travel plan. If possible, I would like to postpone the travel plan to another day later this year. I promise that such a situation **does** not usually happen, and **apologize** for any **inconvenience** this may cause you.<br> 
+&emsp;&emsp;&emsp;&emsp;Please excuse me for not being able to inform you of my situation sooner. Your prompt attention to my suggestion would be highly appreciated.<br>
 
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
@@ -90,15 +85,9 @@ to my suggestion would be highly appreciated.<br>
 ## 008
 
 Dear Paul,<br>
-&emsp;&emsp;&emsp;&emsp;I'm glad to hear from you. How have you been these days? Since you're going to present an oral
-report on an ancient Chinese scientist, Bi Sheng is an ideal candidate.<br>
-&emsp;&emsp;&emsp;&emsp;In the middle of the 11 century during the Song Dynasty, Bi Sheng invented the movable type
-printing technique. He mainly used clay type, which saved much time and money compared with block printing. After that,
-the movable type printing technique was widely promoted. China's printing technique was spread to the Arabic region
-during the Yuan Dynasty and then to Africa and Europe. Printing provided a significant condition for the European
-science to develop rapidly after the long night of the medieval period and the emergence of the Renaissance.<br>
-&emsp;&emsp;&emsp;&emsp;I hope you find the above recommendations useful. Looking forward to your successful
-presentation.<br>
+&emsp;&emsp;&emsp;&emsp;I'm glad to hear from you. How have you been these days? Since you're going to **present** an **oral** report on an ancient Chinese **scientist**, Bi Sheng is an ideal candidate.<br> 
+&emsp;&emsp;&emsp;&emsp;In the middle of the 11 century during the Song **Dynasty**, Bi Sheng invented the movable type printing technique. He mainly **used** clay type, which **saved** much time and money compared with block printing. After that, the movable type printing technique was widely promoted. China's printing technique was **spread** to the **Arabic region** during the Yuan Dynasty and then to **Africa and Europe**. Printing provided **a** significant condition for the European **science** to develop **rapidly** after the long night of the medieval period and **the emergence of the Renaissance**.<br>
+&emsp;&emsp;&emsp;&emsp;I hope you find the above recommendations useful. Looking forward to your successful presentation.<br>
 
 <p align="right">Yours,</p>
 <p align="right">Li Ming</p>
