--- a/english/word/simple-word/markdown/p21-p23.md
+++ b/english/word/simple-word/markdown/p21-p23.md
@@ -16,7 +16,7 @@
         - Shippers(货主) have the option of switching to trucks or other forms of transportation.
     - 运输
         - New research on transportation biofuels(['baɪoʊfjuəl] 生物燃料) is already under way.
-- trap
+- trap [træp]
     - n. **陷阱**；圈套；困境； vt. 设陷阱捕捉；使中圈套
     - tra- 拖着
     - 陷阱
@@ -37,8 +37,7 @@
     - **manage** v. 经营，管理；设法做
         - manage to do sth. 设法做某事（并取得成功）
         - try to do （尚未取得成功）
-            - We managed to reach the top of the mountain，and half an hour later we began to <u>ascend(提升, asc)
-              /descend(下降, desc)/decline(下降)/plunge(暴跌)</u>.
+            - We managed to reach the top of the mountain，and half an hour later we began to <u>ascend(提升, asc)/descend(下降, desc)/decline(下降)/plunge(暴跌)</u>.
     - management n. 经营，管理
 - aid [eɪd]
     - n./vt. 帮助（官方）
@@ -50,7 +49,7 @@
     - 袭击；抨击
         - Labour(劳动党) is under attack for opposing(反对) development.
     - heart attack 心脏病发作
-    - attract v. 吸引
+    - attract [əˈtrækt] v. 吸引
 - banker
 - barber [ˈbɑːrbər]
     - n. 理发师（男）
@@ -107,8 +106,7 @@
     - adv. 不同地；相异地
 - drama
     - n. 戏剧；剧本；戏剧性事件
-    - ...the drama was a form(形式) of literature([ˈlɪtrətʃər] 文学) which gave glory([ˈɡlɔːri] 荣耀) to Greece(希腊)
-      and Roma(罗马)...
+    - ...the drama was a form(形式) of literature([ˈlɪtrətʃər] 文学) which gave glory([ˈɡlɔːri] 荣耀) to Greece(希腊) and Roma(罗马)...
       这种戏剧是一种文学形式，它使希腊和罗马获得荣耀
     - dramatic adj. 戏剧性的；巨大的
         - The same dramatic technological changes ...have also increased the risk...
@@ -166,7 +164,7 @@
     - n. 海；海洋(靠近陆地的)
     - ocean
 - tip
-    - n. 末端；小费；**小建议**；vt. 使倾斜，倒入；给...小费
+    - n. **小建议**；末端；小费；vt. 使倾斜，倒入；给...小费
     - root tips 根末端
     - 小建议
         - give them some tips for the tour(旅游)
@@ -193,7 +191,7 @@
     - weaken v. 使虚弱；减弱
         - ...weaken big tech companies
     - weakness n. 虚弱
-    - week 星期，周
+    - week [wiːk] 星期，周
     - wake v. 醒来；唤醒 [weɪk]
 - pair
     - n. 一双；一对；一副； v. 配对
@@ -252,7 +250,7 @@
         - We can manage the health problems that come naturally with age.
     - nature n. 自然；**本质**
         - by its nature 由其本质
-- heat
+- heat [hiːt]
     - n. 热；炎热；热度； v. 加热
 - somewhat
     - adv. 稍微，有一点
@@ -261,7 +259,7 @@
 - audience [ˈɑːdiəns]
     - n. 听众，观众，读者
     - audi- 听
-        - audit n. 审计，审查
+        - audit [ˈɔːdɪt] n. 审计，审查
     - Who are your most important audiences?
 - satellite
     - n. 卫星；人造卫星
@@ -284,7 +282,7 @@
 - March
     - 三月
 - cap
-    - n. 帽子；盖，罩；**最高限额**；vt. 覆盖；**胜过，超过**
+    - n. **最高限额**；帽子；盖，罩；vt. **胜过，超过**；覆盖
     - 最高限额
         - ...<u>if the cap were lifted(上限)(假设条件，虚拟语气（表示与现实相反的假设）)</u>, increasing GDP by 0.6%.
           如果取消上限，GDP将增加0.6%
@@ -381,7 +379,7 @@
     - guardian [ˈɡɑːrdiən] n. 保护者；守卫者
     - -ian 专业的人
         - historian 历史学家
-- genius
+- genius [ˈdʒiːniəs]
     - n. 天才，天赋
     - gen- 产生
         - generate
