--- a/english/word/simple-word/markdown/p48-p50.md
+++ b/english/word/simple-word/markdown/p48-p50.md
@@ -55,7 +55,7 @@
     - pleasant adj. 喜悦的
 - lend
     - vt. 出租，借出
-    - borrow 借入
+    - borrow [ˈbɔːroʊ] 借入
 - palm [pɑːm]
     - n. 手掌； vt. 把...藏于手掌中
 - unreal
@@ -63,16 +63,16 @@
 - devil [ˈdevl]
     - n. 魔鬼，恶魔；淘气鬼
 - tenth
-- coin
+- coin [kɔɪn]
     - vt. **创造（新词语）**；n. 硬币，钱币
     - The term "plant neurobiology" was coined around the notion.
 - unpopular
     - adj. 没人缘的，不受欢迎的
 - memorial [məˈmɔːriəl]
-    - adj. 纪念地，悼念的； n. 纪念碑
+    - adj. 纪念的，悼念的； n. 纪念碑
 - sometime
     - adv. 某个时候
-    - sometime In the future
+    - sometime in the future
     - sometimes 有时
         - Sometimes the heart is smarter than the head.
 - cheaply
@@ -91,7 +91,7 @@
     - n. 黄昏，傍晚
 - glamor/glamour ['glæmə]
     - n. 魅力，诱惑力
-    - grammer n. 语法
+    - grammar n. 语法
 - comb [koʊm]
     - n. 梳子； vt. 梳理；彻底搜查
 - firmly
@@ -196,7 +196,7 @@
     - horror film 恐怖片
 - **canon** [ˈkænən]
     - n. 原则，准则 = principle
-    - American universities want their undergraduates to have a ground In the basic canon of ideals...
+    - American universities want their undergraduates to have a ground in the basic canon of ideals...
 - cottage [ˈkɑːtɪdʒ]
     - n. 小屋；村舍
 - waist [weɪst]
@@ -263,7 +263,7 @@
     - The man walked on the playground aimlessly.
 - circular [ˈsɜːrkjələr]
     - adj. 圆形的，环形的
-- knit
+- knit [nɪt]
     - vt. 编织
     - For H&M to offer a $5.95 knit miniskirt...
 - fox [fɑːks]
