--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -51,14 +51,9 @@ refund. Your help is greatly appreciated.<br>
 ## 005
 
 Dear Professor Smith<br>
-&emsp;&emsp;&emsp;&emsp;On behalf of the "Talents" English Speech Contest committee, I'm writing to invite you to be our
-new judge.<br>
-&emsp;&emsp;&emsp;&emsp;As the core of our "Foreign Culture Festival", this school-wide contest is to be held in the
-Students' Auditorium on May 12 (next Sunday). And we believe that you can give our competitors some enlightening
-comments as both a native-English speaker and a knowledgeable professor. Specifically, the event will start at around 7:
-00 p.m. and last for 2 hours at most. At the end of it, we will have some hand-made presents for each judge and
-competitor.<br>
-&emsp;&emsp;&emsp;&emsp;Once again, we sincerely hope you can be the judge for our competition.
+&emsp;&emsp;&emsp;&emsp;On behalf of the "Talents" English Speech Contest committee, I'm writing to invite you to be our new judge.<br>
+&emsp;&emsp;&emsp;&emsp;As **the core** of our "Foreign Culture Festival", this school-wide contest **is to be held** in the Students' **Auditorium** on May 12 (next Sunday). And we believe that you can give our **competitors** some enlightening comments as both a native-English speaker and a knowledgeable professor. Specifically, the event **will start** at around 7:00 p.m. and **last for** 2 hours at most. At the end of it, we will have some hand-made **presents** for each judge and competitor.<br>
+&emsp;&emsp;&emsp;&emsp;Once again, we sincerely hope you can be the judge **for** our competition.
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
 
