--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -3,3 +3,9 @@
 &emsp;&emsp;From the information given in the above column chart, we can see a striking contrast between developing and developed countries in mobile-phone subscriptions from 2000 to 2008. During this period, there has been a dramatic increase from 0.4 to 4 billion mobile-phone subscriptions in developing countries, while those of developed countries remained steady at just under 1 billion.<br>
 &emsp;&emsp;At least two fundamental factors could have contributed to this phenomenon. On the one hand, with the rapid increase in economic development happening in developing countries, the telecommunication industry in those countries has expanded greatly to meet the demand of globalization. As a result, the user base of mobile phones which can narrow the distance between people and link the whole world together, grew at an incredible speed. On the other hand, the extremely advanced economy of developed countries means less potential in many aspects and their demand for further enlargement tends to saturate.<br>
 &emsp;&emsp;Although the fact remains that phones are already extremely prevalent in both developing and developed countries, the growing gap will continue to widen in the future. Therefore, mobile phone manufacturers should pay more attention to the market in developing countries.<br>
+
+## 042
+
+&emsp;&emsp;The table clearly reflects the statistics of staff's job satisfaction in a certain company. According to the data given above, we can conclude that the percentage of people satisfied with their jobs is the highest among those over 50 years old, at about 40%. In contrast, the percentage of the staff not satisfied with their jobs is about 64% among those in their forties, the highest among all the three age groups.
+&emsp;&emsp;The major determinant of satisfaction lies in people's attitudes. On the one hand, staff members in their forties usually have to undertake a lot of responsibilities from both their families and their careers. So, they have the least satisfaction in their jobs. On the other hand, people over 50 generally have shifted their life goals from achieving the ultimate success to a relatively easy and comfortable life, and therefore are inclined to be much more satisfied with their jobs.
+&emsp;&emsp;In view of the above reasoning, I am convenced that it is difficult for everyone to be content with their jobs. And it is advisable that people should adjust their expectations for work, and that companies should pay more attention to the walfare of their staff.
