feat: add object-clauses of noun-clauses

--- a/english/word/simple-word/markdown/p24-p26.md
+++ b/english/word/simple-word/markdown/p24-p26.md
@@ -46,7 +46,7 @@
 - hug [hʌɡ]
     - vt. 拥抱
     - hug-hugged-hugged-hugging
-    - huge adj. 巨大的
+    - huge [hjuːdʒ] adj. 巨大的
 - ground
     - n. **根据，依据**；地面；土地
     - floor vs ground
@@ -68,7 +68,7 @@
 - wealthy
 - alongside
     - adv. 在旁边；并排的
-- tight
+- tight [taɪt]
     - adj. 紧紧的；牢固的；（时间、经费等）紧的
     - tie-tight
     - a tight knot 紧的结
@@ -79,7 +79,7 @@
 - silver [ˈsɪlvər]
     - n. 银器；银；银币
     - **sliver lining** 一线希望
-- rear
+- rear [rɪr]
     - n. 背部，后面 adj. 后部的背后的； vt. 抚养；饲养
     - 后方的
         - Even the Volkswagen(大众汽车) rear engine car was anticipated(预测).
@@ -88,15 +88,25 @@
     - wear v. 穿，戴;
 - wood
     - n. 木材，木料；（pl. woods）树林
+    - mood n. 心情，情绪
 - folk [foʊk]
-    - n. 民族，人民；adj. 民间的 
+    - n. 民族，人民；adj. 民间的
     - fork n. 叉子
+- townsfolk
+    - n. 镇民，市民
 - friendship
     - n. 友谊，友好
     - leadership n. 领导
     - partnership 合伙关系
+- wild [waɪld]
+    - adj. 野生的；荒凉的
+    - mild [maɪld] adj. 温和的
+    - wide [waɪd] adj. 宽的
 - wildlife
     - n. 野生动物
+    - lifetime n. 一生，终生
+- wildfire
+    - n. 野火
 - well-known
     - adj. 众所周知的，著名的
 - broadly
@@ -111,8 +121,9 @@
     - n. 糖；（食用糖）；vt. 在...中加糖
     - candy n. 糖果
 - fellow [ˈfeloʊ]
-    - n. 同伙，同事；会员； adj. 同伴的，同事的 
+    - n. 同伙，同事；会员； adj. 同伴的，同事的
     - Rats can send out warning message to their fellow.
+    - follow [ˈfɑːloʊ] v. 跟随; 接着...发生
 - miss
     - vt. **想念；错过；漏掉**；n. 小姐
     - miss- 送
@@ -127,10 +138,8 @@
     - n. 副本； vt. 模仿，效仿；复印
 - skin
     - n. 皮肤；毛皮
-- townsfolk
-    - n. 镇民，市民
 - journey [ˈdʒɜːrni]
-    - n. 旅行，行程 
+    - n. 旅行，行程
     - travel vs journey
         - travel 长途旅行
         - journey 与记录有关
@@ -158,7 +167,7 @@
 - holiday
     - n. 假期；假日
 - heaven [ˈhevn]
-    - n. 天堂；(pl.)天空；乐事 
+    - n. 天堂；(pl.)天空；乐事
     - Europe is not a gender-equality([iˈkwɑːləti]) heaven.
     - heavy [ˈhevi] adj. 重的
 - belt [belt]
@@ -187,9 +196,9 @@
     - be proud of 对...感到骄傲
     - proudly adv. 得意地；自豪地
 - pure [pjʊr]
-    - n. 纯的，纯洁的；纯净的；抽象的；完全的，十足的 
+    - n. 纯的，纯洁的；纯净的；抽象的；完全的，十足的
     - 完全的
-        - The idea is pure lobby(游说) talk.
+        - The idea is pure lobby([ˈlɑːbi] 游说) talk.
     - purely adv. 完全地，纯粹地
 - hormone
     - n. 荷尔蒙
@@ -197,7 +206,7 @@
     - n. 舒适；安慰 vt. 使舒适；安慰
     - comfortable adj. 舒适的
 - teenager [ˈtiːneɪdʒər]
-    - n. 青少年 
+    - n. 青少年
     - teenage adj. 青少年的，十几岁的
 - during
     - prep. 在...期间
@@ -213,7 +222,7 @@
     - n. 小溪，溪流
     - The tourist(游客) streams are not entirely separate([ˈsepəreɪt] 分离).
 - previous [ˈpriːviəs]
-    - adj. 先前的，以往的 
+    - adj. 先前的，以往的
     - According to Paragraph 1，most previous surveys(调查) found that home
     - previously adv. 事先；以前
 - actively
@@ -232,6 +241,7 @@
         - They share their food readily.
     - 容易的
         - Loans will be readily available(adj. 可用的) to rich countries.
+    - ready
 - wife
     - n. 妻子
     - midwife 助产士
@@ -243,7 +253,8 @@
         - salary 长期
 - defend [dɪˈfend]
     - vt. **保护；保卫**，防卫；为...辩护
-    - Without the ability to defend their ideas，they cannot fully participate(参加) in our democracy([dɪˈmɑːkrəsi] 民主).
+    - Without the ability to defend their ideas，they cannot fully participate(参加) in our democracy([dɪˈmɑːkrəsi]
+      民主).
       如果没有捍卫自己观点的能力，他们就不能在我们的民主制度中充分参与
     - defender n. 守卫；后卫
     - defendant n. 被告
@@ -260,7 +271,8 @@
     - n. 体温；温度
     - take one's temperature 量体温
     - temper [ˈtempər] v. 使缓和，使调和； n. 脾气
-        - Egalitarian([iˌgælɪˈteriən] 平等主义者) sentiments([ˈsentɪmənt] 平等感) were often tempered by fears. 平等主义的情感常常被恐惧所抑制
+        - Egalitarian([iˌgælɪˈteriən] 平等主义者) sentiments([ˈsentɪmənt] 平等感) were often tempered by fears.
+          平等主义的情感常常被恐惧所抑制
     - temporary adj. 暂时的，临时的
 - socially
     - adv. 社会上地；善于交际的
@@ -273,17 +285,12 @@
     - adj. 疲劳的，累的；厌倦的，厌烦的（tired of）
 - nervous
     - adj. 焦虑的；紧张的
-- wild [waɪld]
-    - adj. 野生的；荒凉的
-    - mild [maɪld] adj. 温和的
-    - wide [waɪd] adj. 宽的
 - mobile
     - n. 移动电话； adj. 非固定的
     - mov- == mob- == mot- 移动
 - flash
     - vi./n. 闪光，闪现
-    - Subjects(实验对象) (exposed to fast-food flashes) also <u>tend to(倾向于)</u> think a musical piece lasts too
-      long. 实验对象在接触快餐画面后，也倾向于觉得一首音乐持续得太久
+    - Subjects(实验对象) (exposed to fast-food flashes) also <u>tend to(倾向于)</u> think a musical piece lasts too long. 实验对象在接触快餐画面后，也倾向于觉得一首音乐持续得太久
 - everywhere
     - adv. 各处，任何地方
 - hotel
@@ -295,7 +302,7 @@
         - fore- 在...之前
             - before prep.
 - tiny [ˈtaɪni]
-    - adj. 极小的，微小的 
+    - adj. 极小的，微小的
 - borrow [ˈbɔːroʊ]
     - vt. 借，借入
     - lend 借出
@@ -305,15 +312,14 @@
         - **involve** [ɪnˈvɑːlv] v. 涉及，卷入
     - a two-volume report 两卷报道
     - n. 量
-        - <u>The IT industry(信息技术产业)</u> produces about <u>the same</u> volume of greenhouse gases <u>as</u> the
-          world's airlines(航空业) do.
+        - <u>The IT industry(信息技术产业)</u> produces about <u>the same</u> volume of greenhouse gases <u>as</u> the world's airlines(航空业) do.
             - the same as 和...一样
     - 音量
         - Beethoven's habit of increasing the volume.
 - unpleasant
     - adj. 令人不快的，不舒服的
 - acre [ˈeɪkər]
-    - n. 英亩 
+    - n. 英亩
     - California's plans treat(处理) 35000 acres of forecast a year by 2020...
 - morning
 - ticket
@@ -341,13 +347,11 @@
     - 一段时间
         - bringing prominence([ˈprɑːmɪnəns] 名声) for a spell
 - wheel [wiːl]
-    - n. **轮，车轮**；vt. 推，拉；vi. 转动，旋转 
+    - n. **轮，车轮**；vt. 推，拉；vi. 转动，旋转
     - ferries([ˈferi]) wheel 摩天轮
     - wheelchair 轮椅
     - 轮子
         - Rates can be scared(害怕的) by a plastic box on wheels.
-- wildfire
-    - n. 野火
 - lab/laboratory
     - n. 实验室
     - lab- 在
@@ -362,7 +366,7 @@
     - loc- 位置
         - local 当地的
 - fan
-    - n. **狂热爱好者，迷**； 扇子vt. **煽动，扇**；
+    - vt. **煽动，扇**；n. **狂热爱好者，迷**； 扇子
     - 煽动
         - Favoritism(['feɪvərɪtˌɪzəm] 偏袒) in official(官方的) access can fan public perceptions([pərˈsepʃn] 看法) of corruption([kəˈrʌpʃn] 腐败).
           官方渠道上的偏袒会加剧公众对腐败的印象
@@ -371,7 +375,7 @@
     - sadness n. 悲伤；悲痛
     - sadly adv. 令人遗憾；不幸地
 - wing [wɪŋ]
-    - n. 翼（建筑物），翅膀 
+    - n. 翼（建筑物），翅膀
     - The building slowly rose wing by wing. 这栋建筑逐渐建成，一翼一翼地加上去
 - fee
     - n. 费用
@@ -402,7 +406,7 @@
     - 运送
         - If a business was shipping a customer's purchase([ˈpɜːrtʃəs] n. 购买) to a state...
 - vice [vaɪs]
-    - n. 缺点，弱点；邪恶；道德败坏 
+    - n. 缺点，弱点；邪恶；道德败坏
     - Idleness(懒惰) is not just a vacation, an indulgence([ɪnˈdʌldʒəns] 沉溺) or a vice.
 - visa
     - n. 签证
@@ -425,7 +429,7 @@
     - n. 云，一团； vt. 使模糊；破坏，使...蒙上阴影
     - 使...蒙上阴影
         - ...letting vague([wɪŋ] 模糊的) pronouncements([prəˈnaʊnsmənt] 宣言) cloud their reputations(声誉).
-- forth
+- forth [fɔːrθ]
     - adv. 向前，向外
     - fore- 向前，向外
         - **forward** == forth
