--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -90,14 +90,9 @@ Dear Paul,<br>
 ## 009
 
 Dear Paul,<br>
-&emsp;&emsp;&emsp;&emsp;I'm glad to hear from you. Thank you for your enthusiastic response to the event!<br>
-&emsp;&emsp;&emsp;&emsp;As you know, I will invite a great many craftsmen to our campus. They will show a variety of
-innovative Chinese craft-making, especially silk-marking. Silk-marking is a handicraft inherited from ancient China, as
-well as a traditional art form. Silk is a symbol of ancient Chinese culture, and the long history of China's silk
-industry is a brilliant page in the encyclopedia of Chinese culture.<br>
-&emsp;&emsp;&emsp;&emsp;This event is going to be held in the Students' Recreation Center from 10:00 am to 4:00 pm on
-May 1, 2025. Could you please help me to write the letters of invitation to all the craftsmen? Looking forward to your
-support.<br>
+&emsp;&emsp;&emsp;&emsp;I'm glad to hear from you. Thank you for your **enthusiastic** response to the event!<br>
+&emsp;&emsp;&emsp;&emsp;As you know, I will invite a great many **craftsmen** to our **campus**. They will show a **variety** of **innovative** Chinese craft-making, especially silk-making. Silk-making is a **handicraft inherited** from ancient China, as well as a traditional art form. Silk is a symbol of **ancient Chinese culture**, and the long history of China's silk industry is **a brilliant page** in the **encyclopedia** of Chinese culture.<br>
+&emsp;&emsp;&emsp;&emsp;This event is going to be held in the Students' Recreation Center from 10:00 am to 4:00 pm on May 1, 2025. Could you please help me **to** write the letters of invitation **to** all the craftsmen? Looking forward to your support.<br>
 
 <p align="right">Yours faithfully,</p>
 <p align="right">Li Ming</p>
