--- a/math/linear_algebra/vector.tex
+++ b/math/linear_algebra/vector.tex
@@ -51,23 +51,40 @@
             \item 两向量成比例
             \item $n+1$个$n$维向量
         \end{enumerate}
-        \item TODO: 向量组$\alpha_1 = (a_{11}, a_{21}, \dots, a_{r1})^T, \alpha_2 = (a_{12}, a_{22}, \dots, a_{r2})^T, \dots, \alpha_m = (a_{1m}, a_{2m}, \dots, a_{rm})^T$及向量组$\alpha_1 = (a_{11}, a_{21}, \dots, a_{r1})^T, \alpha_2 = (a_{12}, a_{22}, \dots, a_{r2})^T, \dots, \alpha_m = (a_{1m}, a_{2m}, \dots, a_{rm})^T$
+        \item 向量组$\alpha_1 = (a_{11}, a_{21}, \dots, a_{r1})^T, \alpha_2 = (a_{12}, a_{22}, \dots, a_{r2})^T, \dots, \alpha_m = (a_{1m}, a_{2m}, \dots, a_{rm})^T$及向量组$\widetilde{\alpha_1} = (a_{11}, a_{21}, \dots, a_{s1})^T, \widetilde{\alpha_2} = (a_{12}, a_{22}, \dots, a_{s2})^T, \dots, \widetilde{\alpha_m} = (a_{1m}, a_{2m}, \dots, a_{sm})^T$，其中 $s \le r$，则称$\widetilde{\alpha_1}, \widetilde{\alpha_2}, \dots, \widetilde{\alpha_m}$为向量组$\alpha_1, \alpha_2, \dots, \alpha_m$的延伸组（或称$\alpha_1, \alpha_2, \dots, \alpha_m$是$\widetilde{\alpha_1}, \widetilde{\alpha_2}, \dots, \widetilde{\alpha_m}$的缩短组
+        \item 对$n$维向量$\alpha_1, \alpha_2, \dots, \alpha_s$和$\beta$，若存在实数$k_1, k_2, \dots, k_n$，使得
+        \[
+            k_{1}\alpha_1 + k_{2}\alpha_2 + \dots + k_{s}\alpha_s = \beta
+        \]
+        则称$\beta$是$\alpha_1, \alpha_2, \dots, \alpha_s$的线性组合，或者说$\beta$可由$\alpha_1, \alpha_2, \dots, \alpha_s$\textbf{线性表出(示)}
+        \item 设有两个$n$维向量组$(I)\alpha_1, \alpha_2, \dots, \alpha_s$;$(II)\beta_1, \beta_2, \dots, \beta_t$，如果$(I)$中每个向量$\alpha_i(i = 1,2,\dots,s)$都可由$(II)$中的向量$\beta_1, \beta_2, \dots, \beta_t$线性表出，则称向量组$(I)$可由向量组$(II)$线性表出
+        \item 如果$(I)(II)$这两个向量组可以互相线性表出，则称这两个\textbf{向量组等价}
+        \item 在向量组$\alpha_1, \alpha_2, \dots, \alpha_s$中，若存在$r$个向量$\alpha_{i_1}, \alpha_{i_2}, \dots, \alpha_{i_r}$线性相关，再加进任一向量$a_j(j = 1,2,\dots,\s)$，向量组$\alpha_{i_1}, \alpha_{i_2}, \dots, \alpha_{i_r}, \alpha_j$就线性相关，则称$\alpha_{i_1}, \alpha_{i_2}, \dots, \alpha_{i_r}$是向量组$\alpha_1, \alpha_2, \dots, \alpha_s$的一个\textbf{极大线性无关组}
     \end{enumerate}
 
     \subsection{定理}
 
     \begin{enumerate}
         \item 向量组$\alpha_1, \alpha_2, \dots, \alpha_s$线性相关
-        \begin{enumerate}
-            \item \Leftrightarrow 其次线性方程组$[\alpha_1, \alpha_2, \dots, \alpha_s][x_1, x_2, \dots, x_n]^T = 0$有非零解
-            \item \Leftrightarrow 向量组的秩$r(\alpha_1, \alpha_2, \dots, \alpha_s) < s$，$s$表示\textbf{未知数的个数}或\textbf{向量个数}
-            \item \Leftrightarrow 若向量组是{\color{red}{方阵}}($n$个$n$维向量)，则$|\alpha_1, \alpha_2, \dots, \alpha_n| = 0$
-        \end{enumerate}
+        \begin{align*}
+            &\Leftrightarrow\; \text{其次线性方程组}[\alpha_1, \alpha_2, \dots, \alpha_s][x_1, x_2, \dots, x_n]^T = 0\text{有非零解} \\
+            &\Leftrightarrow\; \text{向量组的秩}r(\alpha_1, \alpha_2, \dots, \alpha_s) < s, s\text{表示}\textbf{未知数的个数}\text{或}\textbf{向量个数} \\
+            &\Leftrightarrow\; \text{若向量组是{\color{red}{方阵}}($n$个$n$维向量)，则}|\alpha_1, \alpha_2, \dots, \alpha_n| = 0
+        \end{align*}
         \item $n+1$个$n$维向量一定线性相关
         \item 任何{\color{red}{部分}}组$\alpha_1, \alpha_2, \dots, \alpha_r$相关 \Rightarrow \text{{\color{green}{整体}}组}$\alpha_1, \alpha_2, \dots, \alpha_r, \dots \alpha_s$相关
         \item {\color{red}{整体}}组$\alpha_1, \alpha_2, \dots, \alpha_r, \dots \alpha_s$无关 \Rightarrow \text{{\color{green}{部分}}组}$\alpha_1, \alpha_2, \dots, \alpha_r$无关
         \item $\alpha_1, \alpha_2, \dots, \alpha_n$ 线性无关 \Rightarrow \text{延伸组}$\widetilde{\mathbf{\alpha_1}}, \widetilde{\mathbf{\alpha_2}}, \dots, \widetilde{\mathbf{\alpha_n}}$线性无关
         \item $\widetilde{\mathbf{\alpha_1}}, \widetilde{\mathbf{\alpha_2}}, \dots, \widetilde{\mathbf{\alpha_n}}$线性相关 \Rightarrow \text{缩短组}$\alpha_1, \alpha_2, \dots, \alpha_n$ 线性相关
+        \item 向量$\beta$可由向量组$\alpha_1, \alpha_2, \dots, \alpha_s$线性表出
+        \begin{align*}
+            &\Leftrightarrow\; \text{非齐次线性方程组} [\alpha_1, \alpha_2, \dots, \alpha_s][\alpha_1, \alpha_2, \dots, \alpha_s]^T = \beta \text{有解} \\
+            &\Leftrightarrow\; \text{秩} r[\alpha_1, \alpha_2, \dots, \alpha_s] = r[\alpha_1, \alpha_2, \dots, \alpha_s, \beta]
+        \end{align*}
+        \item 如果$\alpha_1, \alpha_2, \dots, \alpha_s (s \ge 2)$线性相关，则其中\textbf{必有一个向量}可用其余向量线性表出；反之，若有一个向量可用其余的$s-1$个向量线性表出，则这$s$个向量必线性相关
+        \item 如果$\alpha_1, \alpha_2, \dots, \alpha_s$线性无关，$\alpha_1, \alpha_2, \dots, \alpha_s, \beta$线性相关，则$\beta$可由$\alpha_1, \alpha_2, \dots, \alpha_s$线性表出，且\textbf{表示法唯一}
+        \item 如果$\alpha_1, \alpha_2, \dots, \alpha_s$可由向量组$\beta_1, \beta_2, \dots, \beta_t$线性表出，且$s > t$，那么$\alpha_1, \alpha_2, \dots, \alpha_s$线性相关。即\textbf{如果多数向量能用少数向量线性表出，那么多数向量一定线性相关}
+        \item 如果$\alpha_1, \alpha_2, \dots, \alpha_s$线性无关，且它可由可由$\beta_1, \beta_2, \dots, \beta_t$线性表出，则$s \le t$
 
 
     \end{enumerate}
@@ -96,6 +113,25 @@
     \subsection{条件转换思路}
 
     \begin{enumerate}
-        \item
+        \item 线性无关的判定与证明:\; 若向量的坐标没有给出，通常用\textbf{定义法} Or \textbf{秩的理论} Or \textbf{反证法}
+        \begin{enumerate}
+            \item \textbf{定义法}证$\alpha_1, \alpha_2, \dots, \alpha_s$线性无关
+            \begin{enumerate}
+                \item 设$k_{1}\alpha_1 + k_{2}\alpha_2 + \dots + k_{s}\alpha_s = 0$
+                \item \Downarrow \text{恒等变形(同乘: 看条件 + 构造条件 or 重组)}
+                \item $k_1 = 0, k_2 = 0, \dots, k_s = 0$
+            \end{enumerate}
+            \item \textbf{秩}证$\alpha_1, \alpha_2, \dots, \alpha_s$线性无关
+            \begin{enumerate}
+                \item \Leftrightarrow $[\alpha_1, \alpha_2, \dots, \alpha_s][x_1, x_2, \dots, x_s]^T = 0$只有零解
+                \item \Leftrightarrow \text{秩}$r(\alpha_1, \alpha_2, \dots, \alpha_s) = s$
+            \end{enumerate}
+            \item \textbf{反证法}
+        \end{enumerate}
+        \item 判断能否线性表出
+        \begin{enumerate}
+            \item 若已知向量坐标 \Rightarrow \text{非齐次线性方程组是否有解}
+            \item 若向量坐标没有给出 \Rightarrow \text{线性相关 Or 秩}
+        \end{enumerate}
     \end{enumerate}
 \end{document}
