--- a/english/word/simple-word/markdown/p55-p58.md
+++ b/english/word/simple-word/markdown/p55-p58.md
@@ -1,110 +1,5 @@
-# p54-p56
+# p55-p58
 
-- **ditch**  [dɪtʃ]
-    - n. 沟，渠道；v. **丢弃，遗弃**
-    - 沟
-        - The car ran off the road into a ditch.
-    - 抛弃
-        - There's plenty of incentive to ditch print.
-- baggage
-    - luggage
-    - checked-baggage fees
-- hurry
-    - vi. 匆忙，赶紧； vt. 使加快，催促
-- toss
-    - vt. 扔，抛（漫不经心的）
-    - I tossed the book aside and got up.
-- bud
-    - n. 叶芽，花蕾
-- **chalk**  [tʃɔːk]
-    - calc- 石灰
-    - n. 粉笔； v. 把...归因于（chalk up to）
-    - 归结为，记录
-        - Learn to laugh at them and chalk them up to experience.  学会笑而待之并且引以为鉴.
-- upstairs
-    - adv. 在楼上
-- eagerly
-    - adv. 渴望地，急切地，热心地
-    - **eager**  adj. 热心于，渴望
-        - be eager to
-        - They are eager to help their friends promote quality products.
-- warrior
-    - n. 勇士，武士
-- **greed**
-    - n. 贪婪，贪心（消极）
-    - ...brings together great wealth，enormous agos，greed，passion and controversy...
-- whisky/whiskey
-    - n. 威士忌酒
-- helplessly
-    - adv. 无助地
-- amid/amidst
-    - prep. 在...中间（正式，非同类，包围）
-    - The hotel was in a beautiful position amid lemon trees.
-    - between 两者之间
-    - among 三者及以上之间
-        - The money was distributed  <u>amid/amidst/among/between</u> four schools in the arrow.
-- headquarters
-    - n. 总部
-- **edition**
-    - n. 版本
-- corn
-    - n. 玉米，谷物
-- hang
-    - vt. 悬挂，吊；绞死
-- grownup
-    - adj. 成年人的； n. 成年人
-- shopkeeper
-    - n. 小商店店主
-- eightfold
-    - adj. 八倍的；八层的
-    - Having a weak elderly parent have jumped eightfold in just one generation.
-- tomorrow
-- carpet
-    - n. 地毯
-- jealousy  [ˈdʒeləsi]
-    - n. 嫉妒，羡慕
-    - Jealousy and anger may have evolved to alert us to important inequalities.
-- conference
-    - n. 会议（正式，大型）
-    - **confer**  vi.商讨； vt. **授予**
-        - confer a degree
-- foggy
-    - adj. 有雾的
-    - 模糊的
-        - ...having only a foggy view of the future is of little good.
-- bookstore
-- jaw  [dʒɔː]
-    - n. 颚，颔
-- lone
-    - adj. 单独的，独自的
-- solidly
-    - adv. 坚固地；结实的
-    - **solid** adj. 固体的；坚固的； b. 固体
-        - the solid structure of publicly traded companies
-- overnight
-    - adv. 在整个夜里；在短时间内
-- mealtime
-    - n. 就餐时间
-- handy
-    - adj. 便利的；手边的
-- curve
-    - n. 曲线，弧线；弯曲
-        - The learning curve has been steep.
-    - curl 卷曲的
-- **tightly**
-    - adv. 紧紧地；牢固的
-    - tie
-- disk
-    - n. 磁盘
-- butterfly
-- unhelpful
-    - adj. 无益的；无用的
-- zero
-- chess
-    - n. 国际象棋
-- spokesperson
-- granny
-    - n. 奶奶，姥姥
 - warmth
     - n. 温暖，暖和
 - trench
@@ -287,3 +182,129 @@
     - n. 奶牛，母牛
 - flood
     - vt. 淹没，涌入； n. 洪水
+- fur
+  - n. 皮毛
+  - no meat，no fur，no medicines([ˈmedɪsn])
+- grass
+- **inn**
+  - n. 小旅馆，客栈
+  - <u>Caravanserais</u>（商栈） were roadside inns that werebuilt along the <u>Silk Road</u> （丝绸之路）.
+- lawn
+  - n. 草地，草坪
+- *merchant*  [ˈmɜːtʃənt]
+  - n. 商人（正式）
+- quiz
+  - n. 智力竞赛
+- rhythm  [ˈrɪðəm]
+  - n. 节奏，韵律
+  - Our factories hum to the rhythm of robot assembly arms.
+- sail
+  - n. 帆布，帆船； vi. 航行； vt. 驾船航行
+  - 航行
+    - The bill proved largely popular and sailed through Congress.
+- silk
+  - n. 丝，绸
+  - Silk Road
+- tent
+- textbook
+- thief  [θiːf]
+  - n. 贼，小偷
+  - thief - thieves  f/fe -> ves
+    - 妻子（wife）拿刀（knife）去砍狼（wolf），小偷（thief）见了心发慌；躲在架（shelf）下保己（self）命，半（half）片树叶（leaf）遮目光。
+- waterfall
+- ethic
+  - n. 道德，伦理 = morality
+  - **ethnic** n. 种族
+- suite
+  - n. 套房，一套家具
+  - suit 套装
+- priest  [priːst]
+  - n. 牧师，神父
+- **physician**
+  - n. 内科医生
+  - physic 人，物理
+  - physics 物理学
+  - physicist 物理学家
+- pottery
+  - n. 陶器
+- ~~weed~~
+  - n. 杂草，野草
+- **broker**
+  - n. 经纪人
+  - real-estate broker 房地产经纪人
+  - stockbroker 股票经纪人
+- choir  [ˈkwaɪər]
+  - n. 唱诗班
+- ash
+- bald  [bɔːld]
+  - adj. 秃头的；秃的
+- bolt
+  - n. 栓，插销； vi. 冲出去
+- cent
+  - n. 分，币
+  - **percent** 百分比
+- county
+  - n. 郡，县
+- crab
+  - n. 蟹
+- dragon
+- eagle
+  - n. 鹰
+- elephant
+- eyesight
+  - n. 视力
+- feast
+  - n. 盛宴；节目； vi. 尽情享用
+- highway
+- lamb
+  - n. 灯（人造光源）
+  - light 灯光（自然灯光）
+- laundry
+  - n. 洗衣店，洗衣房（可数）；待洗的衣服（不可数）
+- **magnet**  [ˈmæɡnət]
+  - n. 磁铁；**有吸引力的人或物**
+  - The actress was the magnet that drew great audiences.
+- marble  [ˈmɑːrbl]
+  - n. 大理石；弹珠
+- mat
+  - n. 席子，垫子
+- millionaire
+  - n. 百万富翁
+- **miracle**  [ˈmɪrəkl]
+  - n. 奇迹，令人惊奇的人或事
+- **nail**
+  - n. 钉子； vt. **钉，钉牢**
+- outdoor
+- ratio  [ˈreɪʃiəʊ]
+  - n. 比，**比例**，比率（rate）
+  - The rate of inflation is running at about 2.7 percent.
+  - The adult to child ratio is 1 to 6.
+- rob
+  - vt. 抢劫 盗窃；非法剥夺（rob of）
+    - He had been robbed of his dignity.
+  - rip 撕裂
+- rust
+  - n. 铁锈
+- **shallow**
+  - adj. **浅的；肤浅的**； n.(pl.)  浅滩
+- sibling
+  - n. 兄，弟，姐，妹
+- slide
+  - v. 滑动，滑
+- squirrel  [ˈskwɪrəl]
+  - n. 松鼠
+- **steel**
+  - n. 钢； vt. **下定决心应对**
+  - Those involved are steeling themselves for the coming battle.
+- sword
+  - n. 剑，刀
+- ton
+  - n. **大量，许多**； 吨
+  - tons of
+- **convenience**
+  - n. 方便，便利
+  - convenient adj.
+- **patch**
+  - n. 补丁；斑点； vt. 修补； vi. 打补丁
+- pedal
+  - n. 脚踏板； vt. 脚蹬
