--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -4,7 +4,7 @@
 <p align="right">January 9, 2010</p>
 &emsp;&emsp;&emsp;&emsp;Volunteers are needed for the International Conference on Globalization to be held on this campus in early July.<br>
 &emsp;&emsp;&emsp;&emsp;Basic requirements are familiarity with the theme of the conference and proficiency in English. Other requirements include good interpersonal communication abilities, familiarity with our city's tourist attractions and its history, proper manners, and a strong sense of responsibility. Preference will be given to those experienced in international conferences or other similar activities.<br>
-&emsp;&emsp;&emsp;&emsp;Call 86754321 or email postgr@ccc.edu.cn for an application and for information on the interview. Phone and email enquiries are encouraged; no visited please.<br>
+&emsp;&emsp;&emsp;&emsp;Call 86754321 or email postgr@ccc.edu.cn for an application and for information on the interview. Phone and email enquiries are encouraged; No visited please.<br>
 <p align="right">Postgraduates' Association</p>
 
 ## 002
