--- a/english/word/simple-word/markdown/p55-p58.md
+++ b/english/word/simple-word/markdown/p55-p58.md
@@ -9,10 +9,13 @@
     - rubbish bin 垃圾箱
     - storage bin 储物箱
 - cigar
+    - n. 雪茄
 - candle
+    - n. 蜡烛
 - dual
     - adj. 两部分的
 - butter
+    - n. 黄油
 - beg
     - v. 恳求，乞求
     - beg sb. for sth. 向某人乞求某物
@@ -25,7 +28,7 @@
     - adj. 和蔼的，轻柔的
 - meadow
     - n. 草地
-- volcano  [vɒlˈkeɪnəʊ]
+- volcano [vɒlˈkeɪnəʊ]
     - n. 火山
 - paddle
     - n. 桨
@@ -34,9 +37,10 @@
 - **fault**
     - n. 缺点；错误；故障； vt. 挑剔，指责
     - With all her faults I still love her.
+    - fail
 - foolish
     - adj. 愚蠢的，荒谬的
-- epoch  [ˈiːpɒk]
+- epoch [ˈiːpɒk]
     - n. 时期，时代
 - mud
     - n. 泥浆，泥
@@ -52,7 +56,7 @@
 - clock
 - northwestern
 - **bull**
-    - n. 公牛，**买进证券的投机图利者**
+    - n. **买进证券的投机图利者**，公牛
     - The longest bull run in a century of art-market history ended on dramatic note.
 - yellow
 - arrow
@@ -65,19 +69,21 @@
     - n. 衣柜
 - silently
     - adv. 默默地
-- curl  [curl]
+- curl [curl]
     - v. 卷，卷曲
     - The cat curled into a ball and went to sleep.
+    - curve
 - **lame**
     - adj. 跛的，瘸的，站不住脚的，蹩脚的
     - 站不住脚的
         - They should start by discarding California's lame argument.
     - lame person 瘸腿的人
     - lameness n. 残疾
-- chef  [ʃef]
+- chef [ʃef]
     - n. 厨师长
-    - **chief**  [tʃiːf] n. 首领；领袖； adj. 主要的；首席的
+    - **chief** [tʃiːf] n. 首领；领袖； adj. 主要的；首席的
 - lover
+    - n. 爱好者；情人
 - cargo
     - n. 货物
 - safely
@@ -104,20 +110,22 @@
 - joblessness
 - chat
     - b./vi. 闲聊，闲谈
-- Steam
+- steam
     - n. 蒸汽
 - violinist
+    - n. 小提琴手，小提琴演奏者
 - tail
     - n. 尾巴； vi. 盯...的梢
-- **keenly**
+- **keen**ly
     - adv. 敏锐地，敏感的
-    - be keen to/on
-        - lawyers were keen to attend conventions
+    - keen adj. 渴望的; 热衷的; 着迷的
+        - be keen to/on
+            - lawyers were keen to attend conventions
 - crew
     - n. 全体船员，全体机务人员
-    - staff n. 全体职员
+    - **staff** n. 全体职员
         - staff's satisfaction
-- coupon  [ˈkuːpɒn]
+- coupon [ˈkuːpɒn]
     - n. 礼券，优惠券
 - dictionary
     - n. 词典
@@ -128,14 +136,16 @@
     - n. 学期
 - pea
     - n. 豌豆
-- **tablet**  [tablet]
-    - n. 药片；碑；**平板电脑**
+- **tablet** [tablet]
+    - n. **平板电脑**；药片；碑
     - the use of mobile phones and tablets
 - **ego**
-    - n. 自我，自己
-    - It brings together great wealth，enormous egos，greed，and <u>controversy</u>（）争议.
+    - n. 自我，自己(偏消极）
+    - It brings together great wealth，enormous egos，greed，and <u>controversy(争议)</u>.
 - incorrectly
+    - adv. 不正确地，错误地
 - kilo/kilgram
+    - n. 千克，公斤
 - widow
     - n. 寡妇
 - **politely**  [pəˈlaɪtli]
@@ -147,8 +157,8 @@
 - carrot
     - n. 胡萝卜
 - verge
-    - n. 边缘； vi. **接近，濒临**（verge on）
-    - Some of his suggestions verged on the <u>outrageous</u>（球拍）
+    - vi. **接近，濒临**（verge on）；n. 边缘
+    - Some of his suggestions verged on the <u>outrageous(荒唐)</u>
 - racket
     - n. 喧闹；诈骗；敲诈；（网球等）球拍
 - wheat
@@ -159,11 +169,12 @@
 - manly
     - adj. 有男子汉气概的；强壮的
 - skirt
-    - n. 裙子；边缘； vt. **位于...便于边缘**
+    - vt. **位于...便于边缘**；n. 裙子；边缘
     - shirt n. 衬衫
 - lightly
     - adv. 轻柔地
 - keyboard
+    - n. 键盘
 - **affection**
     - n. 喜爱，爱慕之情
     - **affect** v. 影响；深深打动
@@ -183,128 +194,138 @@
 - flood
     - vt. 淹没，涌入； n. 洪水
 - fur
-  - n. 皮毛
-  - no meat，no fur，no medicines([ˈmedɪsn])
-- grass
+    - n. 皮毛
+    - no meat，no fur，no medicines([ˈmedɪsn])
 - **inn**
-  - n. 小旅馆，客栈
-  - <u>Caravanserais</u>（商栈） were roadside inns that werebuilt along the <u>Silk Road</u> （丝绸之路）.
+    - n. 小旅馆，客栈
+    - <u>Caravanserais(商栈)</u> were roadside inns that werebuilt along the <u>Silk Road(丝绸之路)</u>.
+- grass
 - lawn
-  - n. 草地，草坪
+    - n. 草地，草坪
 - *merchant*  [ˈmɜːtʃənt]
-  - n. 商人（正式）
+    - n. 商人（正式）
 - quiz
-  - n. 智力竞赛
-- rhythm  [ˈrɪðəm]
-  - n. 节奏，韵律
-  - Our factories hum to the rhythm of robot assembly arms.
+    - n. 智力竞赛
+- **rhythm** [ˈrɪðəm]
+    - n. 节奏，韵律
+    - Our factories hum to the rhythm of robot assembly arms.
 - sail
-  - n. 帆布，帆船； vi. 航行； vt. 驾船航行
-  - 航行
-    - The bill proved largely popular and sailed through Congress.
+    - n. 帆布，帆船； vi. 航行； vt. 驾船航行
+    - 航行
+        - The bill proved largely popular and sailed through Congress.
 - silk
-  - n. 丝，绸
-  - Silk Road
+    - n. 丝，绸
+    - Silk Road
 - tent
+    - n. 帐篷
 - textbook
+    - n. 科教书，课本
 - thief  [θiːf]
-  - n. 贼，小偷
-  - thief - thieves  f/fe -> ves
-    - 妻子（wife）拿刀（knife）去砍狼（wolf），小偷（thief）见了心发慌；躲在架（shelf）下保己（self）命，半（half）片树叶（leaf）遮目光。
+    - n. 贼，小偷
+    - thief - thieves f/fe -> ves
+        - 妻子(wife)拿刀(knife)去砍狼(wolf)，小偷(thief)见了心发慌；躲在架(shelf)下保己(self)命，半(half)片树叶(leaf)遮目光
 - waterfall
-- ethic
-  - n. 道德，伦理 = morality
-  - **ethnic** n. 种族
+    - n. 瀑布
+- **ethic**
+    - n. 道德，伦理 = morality
+    - **ethnic** n. 种族
 - suite
-  - n. 套房，一套家具
-  - suit 套装
+    - n. 套房，一套家具
+    - suit 套装
 - priest  [priːst]
-  - n. 牧师，神父
+    - n. 牧师，神父
 - **physician**
-  - n. 内科医生
-  - physic 人，物理
-  - physics 物理学
-  - physicist 物理学家
+    - n. 内科医生
+    - physic- 人，物理
+    - physics 物理学
+    - physicist 物理学家
+    - surgery
 - pottery
-  - n. 陶器
-- ~~weed~~
-  - n. 杂草，野草
+    - n. 陶器
 - **broker**
-  - n. 经纪人
-  - real-estate broker 房地产经纪人
-  - stockbroker 股票经纪人
-- choir  [ˈkwaɪər]
-  - n. 唱诗班
+    - n. 经纪人
+    - **real-estate broker** 房地产经纪人
+    - **stockbroker** n. 股票经纪人
+- choir [ˈkwaɪər]
+    - n. 唱诗班
 - ash
+    - n. 灰，灰烬
 - bald  [bɔːld]
-  - adj. 秃头的；秃的
+    - adj. 秃头的；秃的
 - bolt
-  - n. 栓，插销； vi. 冲出去
+    - n. 栓，插销； vi. 冲出去
 - cent
-  - n. 分，币
-  - **percent** 百分比
+    - n. 分，币
+    - **percent** 百分比
 - county
-  - n. 郡，县
+    - n. 郡，县
 - crab
-  - n. 蟹
+    - n. 蟹
 - dragon
+    - n. 龙
 - eagle
-  - n. 鹰
+    - n. 鹰
 - elephant
+    - n. 象
 - eyesight
-  - n. 视力
+    - n. 视力
 - feast
-  - n. 盛宴；节目； vi. 尽情享用
+    - n. 盛宴；节目； vi. 尽情享用
 - highway
+    - n. 公路
 - lamb
-  - n. 灯（人造光源）
-  - light 灯光（自然灯光）
+    - n. 灯
+    - light 灯光
+    - light vs lamp
+        - light 自然灯光
+        - lamp 人造光源
 - laundry
-  - n. 洗衣店，洗衣房（可数）；待洗的衣服（不可数）
-- **magnet**  [ˈmæɡnət]
-  - n. 磁铁；**有吸引力的人或物**
-  - The actress was the magnet that drew great audiences.
-- marble  [ˈmɑːrbl]
-  - n. 大理石；弹珠
+    - n. 洗衣店，洗衣房（可数）；待洗的衣服（不可数）
+- **magnet** [ˈmæɡnət]
+    - n. **有吸引力的人或物**；磁铁
+    - The actress was the magnet that drew great audiences.
+- marble [ˈmɑːrbl]
+    - n. 大理石；弹珠
 - mat
-  - n. 席子，垫子
+    - n. 席子，垫子
 - millionaire
-  - n. 百万富翁
-- **miracle**  [ˈmɪrəkl]
-  - n. 奇迹，令人惊奇的人或事
+    - n. 百万富翁
+- **miracle** [ˈmɪrəkl]
+    - n. 奇迹，令人惊奇的人或事
 - **nail**
-  - n. 钉子； vt. **钉，钉牢**
+    - vt. **钉，钉牢**；n. 钉子
 - outdoor
-- ratio  [ˈreɪʃiəʊ]
-  - n. 比，**比例**，比率（rate）
-  - The rate of inflation is running at about 2.7 percent.
-  - The adult to child ratio is 1 to 6.
+- ratio [ˈreɪʃiəʊ]
+    - n. **比例**，比，比率（rate）
+    - The **rate** of inflation is running at about 2.7 percent.
+    - The adult to child **ratio** is 1 to 6.
 - rob
-  - vt. 抢劫 盗窃；非法剥夺（rob of）
+    - vt. 抢劫 盗窃；非法剥夺(rob of sth.)
     - He had been robbed of his dignity.
-  - rip 撕裂
+    - rip 撕裂
 - rust
-  - n. 铁锈
+    - n. 铁锈
 - **shallow**
-  - adj. **浅的；肤浅的**； n.(pl.)  浅滩
+    - adj. **浅的；肤浅的**； n.(pl.)  浅滩
+    - deep 反义词
 - sibling
-  - n. 兄，弟，姐，妹
+    - n. 兄，弟，姐，妹
 - slide
-  - v. 滑动，滑
-- squirrel  [ˈskwɪrəl]
-  - n. 松鼠
+    - v. 滑动，滑
+- squirrel [ˈskwɪrəl]
+    - n. 松鼠
 - **steel**
-  - n. 钢； vt. **下定决心应对**
-  - Those involved are steeling themselves for the coming battle.
+    - vt. **下定决心应对**；n. 钢
+    - Those involved are steeling themselves for the coming battle.
 - sword
-  - n. 剑，刀
+    - n. 剑，刀
 - ton
-  - n. **大量，许多**； 吨
-  - tons of
+    - n. **大量，许多**； 吨
+    - tons of
 - **convenience**
-  - n. 方便，便利
-  - convenient adj.
+    - n. 方便，便利
+    - **convenient** adj. 方便的，便利的
 - **patch**
-  - n. 补丁；斑点； vt. 修补； vi. 打补丁
+    - n. 补丁；斑点； vt. 修补； vi. 打补丁
 - pedal
-  - n. 脚踏板； vt. 脚蹬
+    - n. 脚踏板； vt. 脚蹬
