--- a/english/word/simple-word/markdown/p48-p50.md
+++ b/english/word/simple-word/markdown/p48-p50.md
@@ -31,7 +31,7 @@
 - nonfiction [ˌnɒn'fɪkʃən]
     - n. 非小说作品，纪实文学
     - fiction n. 小说作品，虚构故事
-        - science([ˈsaɪəns]) fiction 
+        - science([ˈsaɪəns]) fiction
 - teamwork
     - n. 协同工作；配合
 - prince [prɪns]
@@ -112,7 +112,9 @@
     - 提倡
         - He championed cunning rather than virtue...
 - grandfather
+
 ---
+
 - tourism
     - n. 旅游业
 - junk [dʒʌŋk]
@@ -121,6 +123,8 @@
     - I've cleared out all that old junk from the floor.
 - housekeeper
     - n. 管家，杂物主管
+    - gatekeeper n. 看门人，守门人；门卫
+    - shopkeeper n. 小商店店主
 - **cart**
     - n. 手推车；马车
 - cake
@@ -226,7 +230,7 @@
     - n. 感恩节
 - **mess**
     - n. 混乱，困境； vt. 弄乱，搞乱
-    - in a mass 
+    - in a mass
     - 弄乱 mess up
         - <u>mess up</u> customer records
 - cab
@@ -239,8 +243,6 @@
     - n. 亲戚，亲属
     - next of kin 近亲
         - Her next of kin have been informed.
-- gatekeeper
-    - n. 看门人，守门人；门卫
 - guest [ɡest]
     - n. 客人；顾客； vt. 款待； adj. 客座的
     - guest worker 客籍工人
