--- a/english/word/simple-word/markdown/p51-p54.md
+++ b/english/word/simple-word/markdown/p51-p54.md
@@ -20,8 +20,8 @@
     - cock
     - chicken
 - plumber [ˈplʌmər]
-    - plumb- 铅
     - n. 管子工，水暖工
+    - plumb- 铅
 - **physicist** [ˈfɪzɪsɪst]
     - n. 物理学家
 - brick [brɪk]
@@ -46,9 +46,10 @@
     - n. 针织套衫，羊毛套衫
 - cellphone
     - n. 无线电话
-- hole
+- hole [hoʊl]
     - n. 洞，洞穴
     - Water had collected in the holes in the road.
+    - holy [ˈhoʊli] adj. 神圣的，圣洁的
 - homelessness
     - n. 无家可归
 - jackpot
@@ -56,7 +57,6 @@
 - pin [pɪn]
     - n. 针；钉
     - 词根：针
-        - pineapple 玻璃
 - bruise [bruːz]
     - n. 疼，愈伤，碰伤
     - The player received a bad bruise but laughed it off.
@@ -122,6 +122,7 @@
     - n. 海滩
 - downstairs
     - adv. 在楼下
+    - upstairs adv. 在楼上
 - **classic**
     - adj. 典型的，经典的
         - a classic case of "paralysis by analysis".
@@ -139,9 +140,11 @@
     - v. .. as 把...视为
 - lonely
     - adj. 孤独的，独自的
+    - lone
+        - adj. 单独的，独自的
 - **echo** [ˈekoʊ]
     - n. 回音； vi. 发出回声
-    - Never forget，there must be an echo 念念不忘，必有回响
+    - Never forget, there must be an echo 念念不忘，必有回响
 - nursery
     - n. 育儿所，保育室
 - ribbon [ˈrɪbən]
@@ -206,6 +209,9 @@
     - interest
 - fourfold
     - adj./adv. 四倍的
+    - fold n. 褶皱； v. 折叠
+    - eightfold adj. 八倍的；八层的
+        - Having a weak elderly parent have jumped eightfold in just one generation.
 - rectangle [ˈrektæŋɡl]
     - n. 长方形，矩形
     - rect- 直的
@@ -221,7 +227,8 @@
     - peanut 花生
 - luggage [ˈlʌɡɪdʒ]
     - n. 行李
-    - baggage(美)
+    - baggage - n. 行李(美)
+        - checked-baggage fees
 - thankfully
     - adv. 幸亏
 - shelf
@@ -230,7 +237,10 @@
 - **jealous**  [ˈdʒeləs]
     - adj. 嫉妒的，猜忌的；唯恐失去的
     - be jealous of 嫉妒某人
-        - monkeys，like humans，tend to be jealous of each of each other
+        - monkeys, like humans, tend to be jealous of each other
+    - jealousy [ˈdʒeləsi]
+        - n. 嫉妒，羡慕
+        - Jealousy and anger may have evolved to alert us to important inequalities.
 - rewrite
 - childbirth
     - n. 分娩；生孩子
@@ -307,10 +317,6 @@
         - The car ran off the road into a ditch.
     - 抛弃
         - There's plenty of incentive to ditch print.
-- baggage
-    - n. 行李
-    - luggage
-    - checked-baggage fees
 - hurry
     - vi. 匆忙，赶紧； vt. 使加快，催促
 - toss
@@ -323,8 +329,6 @@
     - calc- 石灰
     - 归结为，记录 chalk up to
         - Learn to laugh at them and chalk them up to experience. 学会笑而待之并且引以为鉴.
-- upstairs
-    - adv. 在楼上
 - eagerly
     - adv. 渴望地，急切地，热心地
     - **eager**  adj. 热心于，渴望
@@ -355,18 +359,9 @@
     - vt. 悬挂，吊；绞死
 - grownup
     - adj. 成年人的； n. 成年人
-- shopkeeper
-    - n. 小商店店主
-- eightfold
-    - adj. 八倍的；八层的
-    - fourfold
-    - Having a weak elderly parent have jumped eightfold in just one generation.
 - tomorrow
 - carpet
     - n. 地毯
-- jealousy [ˈdʒeləsi]
-    - n. 嫉妒，羡慕
-    - Jealousy and anger may have evolved to alert us to important inequalities.
 - **conference**
     - n. 会议（正式，大型）
     - **confer** vt. **授予**；vi. 商讨
@@ -382,8 +377,6 @@
 - bookstore
 - jaw [dʒɔː]
     - n. 颚，颔
-- lone
-    - adj. 单独的，独自的
 - solidly
     - adv. 坚固地；结实的
     - **solid** adj. 固体的；坚固的；n. 固体
